# nonebot-plugin-bili2mp4

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  config.py  example_config.py  publish.py  pyproject.toml
nonebot_plugin_bili2mp4/: __init__.py  __main__.py
tests/: __init__.py  test_plugin.py
